# blink-tips

./: .gitignore  Anchor.toml  LICENSE  README.md  package.json  tsconfig.json
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: web.yml
programs/tip-vault/: Cargo.toml
programs/tip-vault/src/: lib.rs
tests/: tip-vault.ts
web/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx
web/app/api/actions/claim/[tipper]/[recipient]/: route.ts
web/app/api/actions/subscribe/[recipient]/: route.ts
web/app/api/feed/: route.ts
web/app/api/icon/: route.tsx
web/app/api/leaderboard/: route.ts
web/app/api/messages/: route.ts
web/app/api/my-vaults/: route.ts
web/app/claim/[tipper]/[recipient]/: ClaimClient.tsx  TipperMessages.tsx  page.tsx
web/app/components/: AppProviders.tsx  BlinkGenerator.tsx  BlinkRender.tsx  CustomBlinkCard.tsx  Leaderboard.tsx  SolanaProviders.tsx  TipFeedToast.tsx  WalletBadge.tsx
web/app/inbox/: ClaimButton.tsx  InboxClient.tsx  InboxWrapper.tsx  page.tsx
web/app/lib/: redis.ts  tip-vault.ts
web/app/tip/[recipient]/: TipClient.tsx  page.tsx
web/public/: actions.json
