[package]
name = "tip-vault"
version = "0.1.0"
description = "Pull-model recurring tip vaults for Solana Blinks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tip_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
